--- a/style.css
+++ b/style.css
@@ -1,4 +1,152 @@
+:root {
+    --mellow-apricot: #fcb97dff;
+    --buff: #edd892ff;
+    --khaki-web: #c6b89eff;
+    --ash-gray: #b5b8a3ff;
+    --laurel-green: #aaba9eff;
+}
+
+body {
+    background-color: rgb(68, 62, 73);
+    margin: 0;
+}
+
+svg {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: 10px;
+}
+.plates {
+    display: flex;
+    flex-wrap: wrap;
+    max-height: 160px;
+    width: 50px;
+    cursor: pointer;
+    z-index: 2;
+}
+.plate {
+    height: 80px;
+    width: 80px;
+    z-index: 2;
+}
+.menu {
+    filter: url(#gooeyness);
+}
+.x .line {
+    stroke-width: 5.5px;
+    z-index: 2;
+}
+.x {
+    transform: scale(0);
+    transition: transform 400ms;
+}
+.line {
+    z-index: 2;
+    fill: none;
+    stroke: black;
+    stroke-width: 6px;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    transform-origin: 50%;
+    transition: stroke-dasharray 500ms 200ms, stroke-dashoffset 500ms 200ms, transform 500ms 200ms;
+}
+.plate2 .line1 {
+    stroke-dasharray: 21 185.62753295898438;
+    transition-delay: 0;
+  }
+  .plate2 .line2 {
+    stroke-dasharray: 21 178.6514129638672;
+    transition-delay: 30ms;
+  }
+  .plate2 .line3 {
+    stroke-dasharray: 21 197.92425537109375;
+    transition-delay: 60ms;
+  }
+  .plate2 .line4 {
+    stroke-dasharray: 21 190.6597137451172;
+    transition-delay: 90ms;
+  }
+  .plate2 .line5 {
+    stroke-dasharray: 21 208.52874755859375;
+    transition-delay: 120ms;
+  }
+  .plate2 .line6 {
+    stroke-dasharray: 21 186.59703063964844;
+    transition-delay: 150ms;
+  }
+  .active.plate2 .line1 {
+    stroke-dasharray: 5 185.62753295898438;
+    stroke-dashoffset: -141px;
+  }
+  .active.plate2 .line2 {
+    stroke-dasharray: 5 178.6514129638672;
+    stroke-dashoffset: -137px;
+  }
+  .active.plate2 .line3 {
+    stroke-dasharray: 5 197.92425537109375;
+    stroke-dashoffset: -176px;
+  }
+  .active.plate2 .line4 {
+    stroke-dasharray: 5 190.6597137451172;
+    stroke-dashoffset: -159px;
+  }
+  .active.plate2 .line5 {
+    stroke-dasharray: 5 208.52874755859375;
+    stroke-dashoffset: -139px;
+  }
+  .active.plate2 .line6 {
+    stroke-dasharray: 5 186.59703063964844;
+    stroke-dashoffset: -176px;
+  }
+  .active.plate2 .x {
+    transition: transform 400ms 250ms;
+  }
+.active .x {
+    transform: scale(1);
+    transition: transform 400ms 350ms;
+}
+#sideNavSlider {
+    height: 100%;
+    width: 0px;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    left: 0;
+    background-color: white;
+    padding-top: 60px;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+#sideNavSlider a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+#sideNavSlider a:hover {
+    color: #f1f1f1;
+}
+
+#pageContainer {
+    width: 100%;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
 h1 {
     color: blue;
     text-align: center;
+}
+main {
+    margin: 10px;
+}
+
+footer {
+    height: 5rem;
+    width: 100%;
+    background-color:black;
 }
