--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ body {
     background-color: var(--grullo);
     margin: 0;
 }
+h1 {
+  margin-top: 10px;
+}
 
 svg {
     width: 80px;
@@ -122,15 +125,28 @@ svg {
     z-index: 1;
     left: 0;
     background-color: white;
-    padding: 70px 0 20px 0;
+    padding: 100px 0 20px 0;
     overflow-x: hidden;
     transition: 0.5s;
 }
+#sideNavSlider::-webkit-scrollbar, .unitDropdown::-webkit-scrollbar {
+  width: 16px;
+}
+
+#sideNavSlider::-webkit-scrollbar-track, .unitDropdown::-webkit-scrollbar-tracks {
+  background: #ffffff;
+}
+
+#sideNavSlider::-webkit-scrollbar-thumb, .unitDropdown::-webkit-scrollbar-thumb {
+  background-color: #d4cdb9;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
 #sideNavSlider p, #sideNavSlider a {
-    padding: 16px 8px 8px 20px;
+    padding: 8px 8px 8px 20px;
     width: 100% - 20px;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 17px;
     color: #818181;
     display: block;
     background: linear-gradient(#b3ad5d 0 0) var(--p,0)/var(--p,0) no-repeat;
@@ -167,13 +183,13 @@ svg {
   color: white;
 }
 .unitsOpen {
-  height: 280px;
+  height: 250px;
 }
 
 #pageContainer {
     width: 100%;
     display: flex;
-    min-height: 100vh;
+    min-height: 105vh;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -182,40 +198,5 @@ h1 {
     text-align: center;
 }
 main {
-    margin: 10px;
-}
-
-footer {
-    display: flex;
-    flex-direction: row;
-    height: 10rem;
-    width: 100%;
-    background-color: var(--pale-silver);
-}
-.copyrightInfo {
-  width: 50%;
-}
-.copyrightInfo p {
-  color: var(--old-lavender);
-}
-form {
-  display: flex;
-  flex-direction: row;
-  width: 50%;
-}
-.questions {
-  margin: auto;
-}
-.inputs {
-  margin: auto;
-}
-#description {
-  display: inline-block;
-  margin: auto;
-  resize: none;
-  height: 100px;
-  width: 200%;
-}
-#submit {
-  display: flex;
+    margin: 0 70px 0 70px;
 }
