--- a/CSS/unit1Style.css
+++ b/CSS/unit1Style.css
@@ -10,4 +10,16 @@
     --grullo: #b9a394ff;
     --pale-silver: #d4c5c7ff;
     --languid-lavender: #dad4efff;
-  }
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+#pageContainer {
+    justify-content: center;
+    max-width: 100vh;
+}
+.unitContent {
+    margin-left: 20px;
+}
