--- a/CSS/unit1Style.css
+++ b/CSS/unit1Style.css
@@ -21,5 +21,10 @@ h1 {
     max-width: 100vh;
 }
 .unitContent {
-    margin-left: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.unitContent img {
+    width: 60%;
+    margin-left: 175px;
 }
