--- a/CSS/normalize.css
+++ b/CSS/normalize.css
@@ -205,6 +205,7 @@ main {
 }
 #compiler {
     margin: 0 auto;
+    margin-bottom: 50px;
     border: none;
     border-radius: 10px;
     height: 40vh;
@@ -220,7 +221,7 @@ main {
 }
 .codeText {
     padding: -5px;
-    width: 50%;
+    width: 55%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
