--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,3 +20,10 @@ h1 {
     text-align: center;
     margin-top: 100px;
 }
+#github {
+  margin: 0 auto;
+  transition: 0.2s;
+}
+#github:hover {
+  transform: scale(1.1);
+}
