--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,3 +27,18 @@ h1 {
 #github:hover {
   transform: scale(1.1);
 }
+#photoGallery {
+  margin: 100px 200px;
+  display: grid;
+  grid-template-rows: repeat(2, 0.5fr);
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2vh;
+}
+#photoGallery img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+#photo6 {
+  grid-column: span 2;
+}
